feat: complete Phase 3 community artifacts and implement Phase 4 discovery features
Phase 3 — Community Contribution:
- Add .github/ISSUE_TEMPLATE/suggest-a-bench.yml (structured bench form)
- Add .github/ISSUE_TEMPLATE/data-issue.yml (bad data report form)
- Add .github/pull_request_template.md (data + code PR checklists)
- Add scripts/issue-to-yaml.js (parse issue body → ready-to-paste YAML)
- Add docs/SCHEMA.md (full field reference, enum values, ID convention)
- Add npm run issue-to-yaml script

Phase 4 — Discovery & Export:
- Add src/search.js: full-text search (name, notes, region), 200ms debounce, Escape to clear
- Add src/hash.js: URL hash sync #lat,lng,zoom via history.replaceState
- Add src/export.js: export filtered benches as GeoJSON, CSV, or YAML
- Wire search + filter into a combined predicate in main.js
- Bench count badge now updates live on every filter/search change
- Hash state restores map view on page load; skips fitBounds if hash present
- Add search input and export panel to index.html; fix type="button" on all buttons
- Add .search-input and .export-panel styles in style.css (mobile-responsive)
- Update docs/PHASES.md: mark phases 0-3 complete, track Phase 4 progress

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview",
     "validate": "node scripts/compile-yaml.js",
     "catalogue": "node scripts/generate-catalogue.js",
+    "issue-to-yaml": "node scripts/issue-to-yaml.js",
     "test": "playwright test"
   },
   "dependencies": {
