feat: implement Phase 5 enrichment — heatmap, PWA, Overpass import, a11y
- src/heatmap.js: Leaflet.heat density layer, toggleable, degrades gracefully
- src/map.js: expose window.L for UMD plugin compat (leaflet.heat)
- src/main.js: heatmap init + toggle, SW registration, combined predicate
- scripts/overpass-import.js: query Overpass API → YAML (npm run overpass-import)
- public/manifest.webmanifest + sw.js + icon.svg: PWA with offline tile cache
- index.html: skip link, aria-live bench count, aria-pressed chips/toggles,
  role=group on filter groups, preconnect hints, apple-touch-icon
- src/sidebar.js: Escape closes sidebar, focus moves to close button on open
- src/filters.js: aria-pressed kept in sync with .active class
- style.css: .skip-link (visible on focus), .btn-icon.active (inverted)
- docs/PHASES.md: Phase 5 deliverables checked off, milestone table updated

--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "validate": "node scripts/compile-yaml.js",
     "catalogue": "node scripts/generate-catalogue.js",
     "issue-to-yaml": "node scripts/issue-to-yaml.js",
+    "overpass-import": "node scripts/overpass-import.js",
     "test": "playwright test"
   },
   "dependencies": {
     "animejs": "^3.2.2",
     "leaflet": "^1.9.4",
+    "leaflet.heat": "^0.2.0",
     "yaml": "^2.4.5"
   },
   "devDependencies": {
