feat: browser-only Overpass import + IDB storage layer + SW fixes
Storage layer (src/store.js):
- IndexedDB stale-while-revalidate (4h threshold) replaces raw fetch
- mergeFeatures() merges imported GeoJSON into IDB, deduplicates by id
- setBenchProvider(fn) hook for future DB backend migration

In-app area import (src/bbox-select.js):
- Stores Overpass results directly in IndexedDB via mergeFeatures()
- New markers rendered live via onFeaturesImported callback in main.js
- No YAML files created; no git involvement required

Service worker (public/sw.js):
- Guard fetch handler against non-http(s) schemes (chrome-extension://)
- Passthrough .webmanifest so browser always gets a fresh manifest
- Passthrough overpass-api.de (POST, can't be cached)
- Guard cache.put against non-GET requests in networkFirst()

Other:
- vite.config.js: webmanifest-mime plugin sets correct Content-Type in dev
- scripts/overpass-import.js + compile-yaml.js: retry logic, --fix mode
- Seed YAML cleanup (null field removal via validate:fix)
- Tests: dynamic bench counts, waitForFunction replacing waitForTimeout
- docs/PHASES.md: data ownership model table, clarify maintainer tooling

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "validate": "node scripts/compile-yaml.js",
+    "validate:fix": "node scripts/compile-yaml.js --fix",
     "catalogue": "node scripts/generate-catalogue.js",
     "issue-to-yaml": "node scripts/issue-to-yaml.js",
     "overpass-import": "node scripts/overpass-import.js",
