feat: marker clustering with material/condition colours
Add Leaflet.markercluster so nearby benches group into count badges
at low zoom levels and expand to individual markers at zoom 17+.

- src/markers.js: full rewrite — L.markerClusterGroup with chunkedLoading,
  disableClusteringAtZoom: 17, zoom-adaptive maxClusterRadius, and custom
  bench-cluster divIcon (sm/md/lg size tiers). renderMarkers now returns
  { registry, clusterGroup }. New addMarkersToGroup() for bbox import path.
  applyMarkerFilter replaces opacity animation with clearLayers/addLayers,
  eliminating the O(n×stagger) filter bottleneck.
- src/main.js: destructure { registry, clusterGroup } from renderMarkers;
  thread clusterGroup through filter and bbox import paths.
- style.css: material-colour outer diamond (wood/metal/stone/concrete/
  plastic/other) + condition-colour inner dot (good/fair/poor/unknown).
  Cluster badge styles (.bench-cluster sm/md/lg). Remove opacity:0 and
  scale(0) initial state — no longer driven by animateMarkersIn.
- docs/PHASES.md: mark markercluster Phase 4 deliverable complete.
- tests: rewrite markers/filters/sidebar specs to work with clustering —
  navigate to zoom 17 for individual-marker tests, assert bench-count text
  instead of DOM opacity for filter tests, wait for animation to settle.

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "animejs": "^3.2.2",
     "leaflet": "^1.9.4",
     "leaflet.heat": "^0.2.0",
+    "leaflet.markercluster": "^1.5.3",
     "yaml": "^2.4.5"
   },
   "devDependencies": {
